--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,8 +53,8 @@
     ]
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.18",
-    "autoprefixer": "^10.4.22",
-    "postcss": "^8.5.6"
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.0"
   }
 }
